# hermes-examples

./: .buildinfo  .gitignore  README.md  genindex.html  hermes-example.html  hermes-hello-world.ipynb  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: publish.yml
_sources/: hermes-example.ipynb
book/: _config.yml  _toc.yml  hermes-example.ipynb  index.ipynb
book/_build/.doctrees/: environment.pickle  hermes-example.doctree  index.doctree
book/_build/html/: genindex.html  index.html  searchindex.js
book/_build/jupyter_execute/: hermes-example.ipynb  hermes-example.py  index.ipynb  index.py
src/: plotting.py  utils.py
