[tool.poetry]
name = "hermes-examples"
version = "0.1.0"
description = "Notebook examples for hermes usage"
authors = ["Alec Gunny <alecg@mit.edu>"]
license = "MIT"
# readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

"hermes.quiver" = {path = "hermes/hermes/hermes.quiver", extras = ["torch"], develop = true}
"hermes.aeriel" = {path = "hermes/hermes/hermes.aeriel", extras = ["serve"], develop = true}
"hermes.stillwater" = {path = "hermes/hermes/hermes.stillwater", develop = true}

# notebook-specific dependencies, kept separate for
# clarity of the "real" dependency chain
jupyter = {version = "^1.0", optional = true}
ipywidgets = {version = "^8.0", optional = true}
bokeh = {version = "^2.4", optional = true}
pandas = {version = "^1.4", optional = true}
rich = {version = "^12.5", optional = true}
ratelimiter = {version = "^1.2", optional = true}

[tool.poetry.extras]
notebook = ["jupyter", "ipywidgets", "bokeh", "rich", "pandas", "ratelimiter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
